# callscribe

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  epic.md  epic.yml  story.md  story.yml
docs/: backlog-v1.md  bugs.md  tdd-windows-tray-app-v1.md  todo.md
docs/conventions/: tdd.md
docs/qa/: e1-smoke-tests.md
scripts/: import_backlog_v1_github.py
src/callscribe/: __main__.py  bootstrap.py  single_instance.py
src/callscribe/app/: __init__.py  controller.py  recording_service.py  runtime.py
src/callscribe/audio/: __init__.py  stereo_mix.py  windows_capture.py
src/callscribe/config/: __init__.py  settings.py  store.py
src/callscribe/platform/: __init__.py  windows_audio_devices.py
src/callscribe/resources/: __init__.py
src/callscribe/storage/: __init__.py  session_paths.py
src/callscribe/tray/: __init__.py  app_icon.py  null_tray.py  pystray_tray.py
src/callscribe/ui/: __init__.py  settings_dialog.py
tests/: test_e1_tray_app.py  test_tray_adapter_pystray.py
tests/integration/: test_app_startup.py
tests/ui/: test_pystray_tray_adapter.py
tests/unit/: test_app_icon.py  test_bootstrap_logging.py  test_controller_recording_error.py  test_recording_service_non_windows.py  test_session_paths.py  test_stereo_mix.py  test_toml_config_audio.py  test_tray_app_controller.py
